fixed word-wrap on motion-page

--- a/app/assets/stylesheets/motions.css.scss
+++ b/app/assets/stylesheets/motions.css.scss
@@ -95,8 +95,9 @@
   }
   .proposed-by {
     font-size: $font-tiny;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
+  .description { width: 430px; }
   .description p{
     font-size: $font-small;
     color: $dark-grey;
